# Melanify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RENDER_DEPLOY.md  SETUP.md  railway.json  render.yaml
ai_music_service/: .gitignore  Dockerfile  README.md  app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/Home/: HomePage.css  HomePage.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/Navigation/: Navigation.css
frontend/src/services/: api.ts
src/: App.css  App.tsx  config.rs  index.css  lib.rs  main.rs  templates.rs
src/components/Home/: HomePage.css  HomePage.tsx
src/components/Navbar/: Navbar.css  Navbar.tsx
src/components/Navigation/: Navigation.tsx
src/components/Statistics/: StatisticsPage.css  StatisticsPage.tsx
src/config/: mod.rs
src/handlers/: mod.rs  statistics.rs  success.rs
src/models/: playlist.rs
src/routes/: mod.rs  statistics.rs
src/services/: api.ts  gemini_service.rs  mod.rs  musicgen_service.rs  qr_service.rs  statistics_service.rs
src/templates/: index.html
src/utils/: mod.rs
