[package]
name = "spotify-ai-playlist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
rand = "0.8"
rspotify = { version = "0.12.0", features = ["cli"] }
urlencoding = "2.1.3"
actix-session = { version = "0.7", features = ["cookie-session"] }
uuid = { version = "1.3", features = ["v4"] }
dotenv = "0.15"
env_logger = "0.9"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
futures = "0.3.31"
tokio-util = "0.7.15"
lazy_static = "1.5.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
qrcode = { version = "0.12", features = ["image"] }
image = "0.24"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
